[package]
name = "bdk_kyoto"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[features]
default = ["trace"]
trace = ["tracing", "tracing-subscriber"]

[dependencies.kyoto]
git = "https://github.com/rustaceanrob/kyoto"
rev = "24e08d6b443558e2a29a8a6d639f36f662537084"

[dependencies.bdk_chain]
# verion alpha.13
git = "https://github.com/bitcoindevkit/bdk"
rev = "05438017876c3338d091ca85e52242b455e2193a"

[dev-dependencies]
tokio = { version = "1", features = ["full"], default-features = false }
anyhow = "1.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[dev-dependencies.bdk_wallet]
# verion alpha.13
git = "https://github.com/bitcoindevkit/bdk"
rev = "05438017876c3338d091ca85e52242b455e2193a"

[[example]]
name = "signet"

[[example]]
name = "wallet"
