[package]
name = "bdk_kyoto"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dependencies.kyoto]
git = "https://github.com/rustaceanrob/kyoto"
rev = "391bc1a1e921bbdf9f0cce58b115572b00b29146"

[dependencies.bdk_chain]
# verion beta.1
git = "https://github.com/bitcoindevkit/bdk"
rev = "17a9850cba06db837b82cef1dbaf2ef1e342f7ec"

[features]
default = ["trace"]
trace = ["tracing", "tracing-subscriber"]

[dev-dependencies]
tokio = { version = "1", features = ["full"], default-features = false }
anyhow = "1.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[dev-dependencies.bdk_wallet]
# verion beta.1
git = "https://github.com/bitcoindevkit/bdk"
rev = "17a9850cba06db837b82cef1dbaf2ef1e342f7ec"

[[example]]
name = "signet"

[[example]]
name = "wallet"
